# uvceed-disease-alerts

./: .env  README_PHASE3.md  pyproject.toml  readme  readme.md  requirements.in  requirements.txt  run_uvceed_phase2_smoketests.sh
cdc_phase2_runs/20260205T174236Z/: db_checks.json  env.txt  summary.jsonl  summary.tsv
cdc_phase2_runs/20260205T174236Z/logs/: nssp_ed_trajectories_combined_json_db_file.out  nssp_ed_trajectories_combined_json_db_module.out  nssp_ed_trajectories_combined_json_no_db_file.out  nssp_ed_trajectories_combined_json_no_db_module.out  nssp_ed_trajectories_covid_json_db_file.out  nssp_ed_trajectories_covid_json_db_module.out  nssp_ed_trajectories_covid_json_no_db_file.out  (+30 more)
cdc_test_runs/20260205T164145Z/: env.txt  summary.jsonl  summary.tsv
cdc_test_runs/20260205T165231Z/: env.txt  summary.jsonl  summary.tsv
cdc_test_runs/20260205T170306Z/: env.txt  summary.jsonl  summary.tsv
cdc_test_runs/20260205T171126Z/: env.txt  summary.jsonl  summary.tsv
scripts/: geo_smoke.py  install_cron_daily_refresh.sh  run_phase3_smoketests.sh  run_uvceed_cdc_smoketests.sh
sql/: phase3_schema.sql
uvceed_alerts/: .env.example  baseline_output  cdc_fluview_ilinet.py  cdc_fluview_severity.py  cdc_nssp_ed_trajectories.py  cdc_nssp_ed_visits.py  cdc_wastewater.py  cdcnssp_ed_trajectories.py.py  config.py  db.py  geo.py  wastewater_risk.py
uvceed_alerts.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
uvceed_api/: auth.py  cli_refresh_requested.py  config.py  db.py  db_migrate.py  main.py  models.py  refresh.py
uvceed_api/routes/: health.py  signals.py
(+68 files in other folders)
