[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "uvceed-alerts"
version = "0.1.0"
description = "UVCeed disease + outbreak alert ingestion helpers"
requires-python = ">=3.11"
dependencies = [
  "python-dotenv==1.2.1",
  "requests==2.32.3",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["uvceed_alerts*"]

